Implementação do exercicio do mod23